DBZ-6638 Modify Readme file